# CrossPay

./: Readme.md
Crosspay-frontend/: next.config.ts  package-lock.json  package.json
Crosspay-frontend/ai-agent/: package.json
Crosspay-frontend/ai-agent/src/: app.js
Crosspay-frontend/ai-agent/src/lib/: claude.js
Crosspay-frontend/ai-agent/src/routes/: explainer.js  resolver.js
Crosspay-frontend/memory/: MEMORY.md  project_prd.md
Crosspay-frontend/src/app/: globals.css  layout.tsx  page.tsx
Crosspay-frontend/src/app/ai-agent/: page.tsx
Crosspay-frontend/src/app/claim/: page.tsx
Crosspay-frontend/src/app/history/: page.tsx
Crosspay-frontend/src/components/: crosspay-shell.tsx  evm-wallet-provider.tsx  solana-wallet-provider.tsx  top-nav.tsx
Crosspay-frontend/src/lib/: wagmi.ts
ai-agent/: .env.example  package-lock.json
ai-agent/src/routes/: parser.js
app/backend/: .env.example  .gitignore  requirements.txt
app/backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
app/backend/config/: celery.py  settings.py  urls.py
app/backend/payments/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
smartcontract/: .gitignore  Anchor.toml  buffer-keypair.json
smartcontract/programs/lifi/: Cargo.toml
smartcontract/programs/lifi/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
smartcontract/programs/lifi/src/instructions/: cancel_payment.rs  claim_payment.rs  initialize.rs  mod.rs  register_user.rs  send_payment.rs
smartcontract/programs/lifi/tests/: test_initialize.rs
(+9 files in other folders)
